# codocia

./: .gitignore  Cargo.toml  PLAN.md  README.md  SKILL.md  codocia.md  codocia.toml
.codocia/: snapshot.json
.github/workflows/: release.yml  test.yml
docs/: .codocia-snapshot.json  agent-workflow.md  cli.md  configuration.md  distribution.md  index.md  library.md
homebrew-tap-template/Formula/: codocia.rb
npm/: README.md  package.json
npm/scripts/: install.js  install.test.js
src/: lib.rs  main.rs
