[package]
name = "codocia"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generate readable Markdown documentation from code structure and public APIs."
repository = "https://github.com/lhwzds/codocia"
readme = "README.md"
keywords = ["docs", "markdown", "rust", "documentation"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "codocia"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
