[package]
name = "codocia"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Detect documentation drift between Markdown docs and fast-moving code."
repository = "https://github.com/lhwzds/codocia"
documentation = "https://docs.rs/codocia"
readme = "README.md"
keywords = ["docs", "markdown", "drift", "documentation"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["PLAN.md", ".github", "homebrew-tap-template", "npm"]

[[bin]]
name = "codocia"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
